# raggadon

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT_STATUS.md  README.md  SETUP_NEW_MACHINE.md  SETUP_PGVECTOR.md  SUPABASE_SETUP.md  claude_auto_rag.py  create_embedding_usage_table.sql  create_match_documents_function.sql  get_rag_mode.py  install-blank.sh  install-preconfigured.sh  install.sh  install_rag_cli.sh  install_service.sh  main.py  pyproject.toml  rag  raggadon.plist  requirements.txt  start_server.sh  sync-requirements.sh
app/: __init__.py  embedding.py  supabase_client.py  usage.py
cli/: README.md  package-lock.json  package.json
examples/: curl_examples.sh  javascript_client.js  python_client.py
