[tool.poetry]
name = "raggadon"
version = "1.1.0"
description = "RAG-Middleware-System mit FastAPI"
authors = ["Raggadon Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
python-dotenv = "1.0.0"
pydantic = "2.5.0"
supabase = "2.0.2"
postgrest = "0.13.0"
openai = "1.3.7"
numpy = "1.25.2"

[tool.poetry.group.dev.dependencies]
black = "23.11.0"
ruff = "0.1.6"
pre-commit = "3.6.0"
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
httpx = "0.24.1"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true